syntax = "proto3";
package broker.mqtt.connection;
service MQTTBrokerConnectionService {

  rpc mqtt_broker_list_connection(ListConnectionRequest) returns(ListConnectionReply){}

}

message ListConnectionRequest{

}

message ListConnectionReply{
  string connections = 1;
  string connection_type = 2;
  string protocol = 3;
  string source_addr = 4;
}
